# CUDA-FAST-BEV-W

./: .gitignore  CMakeLists.txt  README.md  README_PROJECT.md
ros/: CMakeLists.txt  fastbev_ros_node.cpp  launch_fastbev_node.sh  package.xml
src/: joint_inference.cpp  main.cpp  run_pipeline.cpp  tracking_demo.cpp
src/camera/: README.md  calibration.hpp  camera_frame.cpp  camera_frame.hpp  multi_camera_buffer.hpp
src/common/: stb_image_impl.cpp
src/perception/: README.md  image_preprocessor.cpp  image_preprocessor.hpp  map_runner.cpp  map_runner.hpp  map_runner_persistent.cpp  map_runner_persistent.hpp  perception_types.hpp  prefetch_loader.hpp
src/pipeline/: README.md  perception_pipeline.cpp  perception_pipeline.hpp
src/tracking/: KalmanFilter.cpp  KalmanFilter.hpp  README.md  track.hpp  tracker.cpp  tracker.hpp
tool/: build_trt_engine.sh  draw.py  environment.sh  requirements.txt
tools/: detection_filter.py  infer_from_images.py  nuscenes_adapter.py  prepare_frame_dir.py  run_pipeline.py  video_demo.py  video_tracking_map.py  video_visualize_tracking.py  video_visualize_tracking_global.py
tools/MapTRv2/projects/mmdet3d_plugin/datasets/: __init__.py
tools/MapTRv2/projects/mmdet3d_plugin/maptr/dense_heads/: maptr_head.py
tools/MapTRv2/projects/mmdet3d_plugin/maptr/modules/: transformer.py
tools/maptr/: README.md  __init__.py  maptr_infer_worker.py  maptr_model_infer.py  maptr_server.py  nusc_map_extractor.py  run_maptr.py  setup_maptr_env.sh
